--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="settings_label_login">Username</string>
     <string name="settings_default_bio">About me</string>
     <string name="settings_label_bio">Write smth about yourself</string>
+    <string name="settings_menu_change_name">Change name</string>
+    <string name="settings_menu_exit">Exit</string>
 </resources>
