--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,23 @@
 <resources>
-    <string name="app_name">TelegaClon</string>
+    <string name="app_name">Telegram</string>
 
-
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="settings_default_username">Rakhimzhan Yakubzhanov</string>
-    <string name="settings_default_status">Online</string>
-    <string name="settings_text_account">Account</string>
-    <string name="settings_default_number">+7 777 747 47 11</string>
-    <string name="settings_change_phone_number">Press, to change phone number!</string>
-    <string name="settings_default_login">Yacube</string>
-    <string name="settings_label_login">Username</string>
-    <string name="settings_default_bio">About me</string>
-    <string name="settings_label_bio">Write smth about yourself</string>
-    <string name="settings_menu_change_name">Change name</string>
-    <string name="settings_menu_exit">Exit</string>
+    <string name="settings_default_username">Yura Petrov</string>
+    <string name="settings_default_status">в сети</string>
+    <string name="settings_text_account">Аккаунт</string>
+    <string name="settings_default_number">+791111111111</string>
+    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
+    <string name="settings_default_login">yurapetrov</string>
+    <string name="settings_label_login">Имя пользователя</string>
+    <string name="settings_default_bio">О себе</string>
+    <string name="settings_label_bio">Напишите немного о себе</string>
+    <string name="settings_menu_change_name">Изменить имя</string>
+    <string name="settings_menu_exit">Выход</string>
     <string name="cd_register_image">register_image</string>
-    <string name="resgister_text_enter_code">Enter code</string>
-    <string name="register_text_enter_code">Enter code</string>
-    <string name="register_text_we_send">We send SMS with registration code to your telephone</string>
-    <string name="register_hint_default_code">_ _ _ _ _ _</string>
-    <string name="register_title_your_phone">Your phone</string>
-    <string name="register_toast_enter_phone">Enter phone number</string>
+    <string name="register_text_enter_code">Введите код</string>
+    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на ваш телефон</string>
+    <string name="register_hint_default_code">- - - - - -</string>
+    <string name="register_title_your_phone">Ваш телефон</string>
+    <string name="register_toast_enter_phone">Введите номер телефона</string>
 </resources>
